# filelocalization

./: .env.example  .gitignore  HybridLoc_v2_plan.md  README.md  environment.linux-cuda.yml  environment.yml  localization_plan_report.md  pyproject.toml
configs/: base.yaml  deepseek_v4_flash.yaml  swe_bench_verified.yaml
hybridloc/: log.py
hybridloc/graph/: build.py  callgraph.py  concepts.py  dataflow.py  memory.py  nodes.py  persist.py  seeds.py
hybridloc/llm/: __init__.py  nim_client.py
hybridloc/llm/prompts/: causal_chain.txt  file_rank.txt  listwise_rerank.txt  symptom_extract.txt
hybridloc/parsing/: skeleton.py
hybridloc/pipeline/: actions.py  causal.py  orchestrate.py  stage1_prefilter.py  stage3_symptoms.py  stage4_traversal.py  stage5_rerank.py
hybridloc/retrieval/: dense.py  sparse.py  train.py
hybridloc/utils/: hub_cache.py
results/: swebench_verified.md
scripts/: build_all_graphs.py  build_repo_index.py  restore_cache.py  run_finetune.sh  run_full_graphs.sh  run_localization.py  run_overnight.sh  run_swebench_verified.py  test_nim_queue.py  train_retriever.py  upload_cache.py
swebench_eval/: gold_extractor.py  load_dataset.py  metrics.py  report.py  runner.py
tests/unit/: test_gold_extractor.py  test_metrics.py  test_nim_cache.py  test_no_future_leak.py  test_priority_queue.py  test_skeleton.py
