[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybridloc"
version = "0.1.0"
description = "HybridLoc v2 — graph-guided code localization for SWE-bench"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
  # Parsing — tree-sitter-languages 1.10.2 was built against 0.21.x;
  # 0.22 changed Language.__init__ and broke compatibility.
  "tree-sitter==0.21.3",
  "tree-sitter-languages==1.10.2",

  # Graph
  "networkx==3.3",
  "python-igraph==0.11.6",

  # Retrieval — sparse
  "rank-bm25==0.2.2",

  # Retrieval — dense / training
  "torch==2.3.1",
  "transformers==4.44.2",
  "sentence-transformers==3.0.1",
  "accelerate==0.33.0",
  "einops>=0.8,<1.0",

  # Static analysis
  "jedi==0.19.1",

  # LLM client
  "openai>=1.40,<2.0",
  "tenacity>=8.5,<9.0",
  "httpx>=0.27,<1.0",
  "python-dotenv>=1.0,<2.0",

  # Datasets / git
  "datasets>=2.20,<3.0",
  "huggingface_hub>=0.24,<1.0",
  "GitPython>=3.1,<4.0",

  # Eval / scoring
  "unidiff>=0.7,<1.0",
  "tqdm>=4.66,<5.0",
  "pandas>=2.2,<3.0",
  "pyarrow>=16.0,<19.0",

  # Config
  "pyyaml>=6.0,<7.0",
  "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.5,<1.0",
  "mypy>=1.10,<2.0",
]

[tool.setuptools.packages.find]
include = ["hybridloc*", "swebench_eval*"]
exclude = ["tests*", "data*", "results*", "configs*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # ruff format handles line length

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
